--- a/src/app/formations-table/formations-table.component.css
+++ b/src/app/formations-table/formations-table.component.css
@@ -1,9 +1,17 @@
 /* Structure */
 table {
   width: 100%;
+  table-layout: fixed;
 }
 
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+th, td {
+  overflow: hidden;
+  width:auto;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
