--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -20,7 +20,7 @@
   <!-- Libelle Column -->
   <ng-container matColumnDef="Libelle">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Libellé </th>
-    <td mat-cell *matCellDef="let element"> {{element.Libelle}} </td>
+    <td mat-cell *matCellDef="let element"><span title={{element.Libelle}}> {{element.Libelle}} </span></td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
