add popup libelle, trunck text

--- a/src/app/formations-table/formations-table.component.css
+++ b/src/app/formations-table/formations-table.component.css
@@ -1,8 +1,15 @@
 /* Structure */
 table {
   width: 100%;
+  table-layout: fixed;
 }
 
+th, td {
+  overflow: hidden;
+  width:auto;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .mat-form-field {
   font-size: 14px;
   width: 100%;
