--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar >Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Formations</a>
+      <a mat-list-item routerLink="formation">Formations</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content >
@@ -25,7 +25,7 @@
     <br>
     <button mat-button color="warn" (click)="openDialog()">Open dialog</button>
       <div class="content">
-        <app-formations-table></app-formations-table>
+        <router-outlet></router-outlet>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
