--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
+<!--    <mat-sidenav-container class="sidenav-container">
   
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
@@ -20,12 +20,39 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <app-header></app-header>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <br>
-    <button mat-button color="warn" (click)="openDialog()">Open dialog</button>
-      <div class="content">
-        <router-outlet></router-outlet>
-      </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+    </mat-toolbar>  -->
+<!-- Add Content Here -->
+
+<div class="wrapper">
+  <div class="sidebar">
+    <h1>Menu</h1>
+    <ul>
+      <li><a routerLink="formation"><i class="fas fa-home"></i>Formation</a></li>
+      <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
+      <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
+      <li><a href="#"><i class="fas fa-project-diagram"></i>portfolio</a></li>
+      <li><a href="#"><i class="fas fa-blog"></i>Blogs</a></li>
+      <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+      <li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
+    </ul>
+
+  </div>
+  
+  <div class="main_content">
+    <div class="header"> <h1>UBO-Gestionnaire</h1></div>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+</div>
+
+
+
+<!-- <br>
+<button mat-button color="warn" (click)="openDialog()">Open dialog</button>
+<div class="content">
+  <router-outlet></router-outlet>
+</div> -->
+<!--   </mat-sidenav-content>
+</mat-sidenav-container>  -->
