Making the clickable-feeling optional

--- a/src/app/formation-details/formation-details.component.html
+++ b/src/app/formation-details/formation-details.component.html
@@ -11,7 +11,7 @@
       <ng-template #Niv><mat-card-title>{{item.value}}</mat-card-title></ng-template>
   </div>
   <br><br>
-  <app-formations-table></app-formations-table>
+  <app-formations-table [isClickable]="false"></app-formations-table>
   <div class="center">
     <button (click)="retourner()" mat-raised-button color="primary">Retour</button>
   </div>
