--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -23,5 +23,5 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hoveringRow"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="isClickable?'hoveringRow':''"></tr>
 </table>
