Boutton retour ajouter

--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -1,13 +1,10 @@
 <div class="row " *ngIf="this.activatedRoute.snapshot.url[0].path === 'formation'">
   <div class="col "><mat-form-field>
     <mat-label> <mat-icon>search</mat-icon><span class="Rechercher">Rechercher</span></mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. M2 <3" #input>
-
+    <input [(ngModel)]="recherche" matInput (keyup)="applyFilter($event)" placeholder="Ex. M2 <3" #input>
   </mat-form-field></div>
   <div class="col "> <button (click)="openDialog()" class="button" mat-raised-button ><mat-icon>add</mat-icon>Ajouter Formation</button> </div>
 </div>
-
-<h1><b>U.E:</b></h1>
 
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z6">
