--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -13,7 +13,7 @@
   <!-- Niveau Column -->
   <ng-container *ngFor="let column of displayedColumns" matColumnDef="{{column}}" >
     <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-    <td mat-cell *matCellDef="let element">
+    <td mat-cell *matCellDef="let element" (click)="Details(element[displayedColumns[1]])">
       <div  *ngIf = "column == 'Libelle'; then Niv else other"></div>
       <ng-template #other> {{element[column]}} </ng-template>
       <ng-template #Niv><span title="{{element[column]}}"> {{element[column]}} </span></ng-template>     
