fix Sprint 1 errors

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -28,13 +28,13 @@
     <h1>Menu</h1>
     <ul>
       <li><a routerLink="formation"><i class="fas fa-home"></i>Formation</a></li>
-      
+
     </ul>
 
   </div>
 
   <div class="main_content">
-    <div class="header"> <h1>UBO-Gestionnaire</h1></div>
+    <div class="header"> <h1>UBO Formations</h1></div>
     <div class="content">
       <router-outlet></router-outlet>
     </div>
