--- a/src/app/formation-form/formation-form.component.html
+++ b/src/app/formation-form/formation-form.component.html
@@ -1,58 +1,56 @@
 
     <form class="example-form" [formGroup]="formationForm" (ngSubmit)="onSubmitForm()">
-        
-
 
         <mat-form-field class="example-full-width">
             <mat-label>Code formation</mat-label>
             <input matInput placeholder="M2DOSI" formControlName="codeFormation" (keyup)="upperCase()" [(value)]="code">
             <mat-error *ngIf="formationForm.invalid">
-                 {{getErrocMessage("codeFormation")}} 
+                 {{getErrocMessage("codeFormation")}}
             </mat-error>
         </mat-form-field>
 
           <mat-form-field class="example-full-width">
-            <mat-label>N° de l'année de formation</mat-label>
-            <input matInput placeholder="2" formControlName="numAnnee" type="number">
+            <mat-label>Année de formation</mat-label>
+            <input matInput placeholder="2" formControlName="numAnnee" type="number" min="1" max="3">
             <mat-error *ngIf="formationForm.invalid">
-                {{getErrocMessage("numAnnee")}} 
+                {{getErrocMessage("numAnnee")}}
            </mat-error>
         </mat-form-field>
 
 
           <mat-form-field class="example-full-width">
             <mat-label>Nom de formation</mat-label>
-            <input matInput placeholder="" formControlName="nomFormation" >
+            <input matInput placeholder="" formControlName="nomFormation" maxlength="255">
             <mat-error *ngIf="formationForm.invalid">
-                {{getErrocMessage("nomFormation")}} 
+                {{getErrocMessage("nomFormation")}}
            </mat-error>
           </mat-form-field>
 
           <div class="row">
               <div class="col">
                 <mat-form-field appearance="fill">
-                    <mat-label>Diplome</mat-label>
+                    <mat-label>Diplôme</mat-label>
                     <select matNativeControl  formControlName="diplome" >
-                      <option value="DUT">DUT</option>
                       <option value="L"  >licence</option>
                       <option value="M"  >master</option>
-                      
+                      <option value="D">Doctorat</option>
+
                     </select>
                     <mat-error *ngIf="formationForm.invalid">
-                        {{getErrocMessage("diplome")}} 
+                        {{getErrocMessage("diplome")}}
                    </mat-error>
                 </mat-form-field>
               </div>
               <div class="col">
                 <mat-form-field class="doubleDip" appearance="fill">
                     <mat-label>Double diplome</mat-label>
-                    <select matNativeControl  formControlName="doubleDiplome" >
-                      <option value="o">Vrai</option>
-                      <option value="n">Faux</option>
-                    
-                    </select>
+                      <select matNativeControl  formControlName="doubleDiplome" >
+                        <option value="o">Oui</option>
+                        <option value="n">Non</option>
+
+                      </select>
                     <mat-error *ngIf="formationForm.invalid">
-                        {{getErrocMessage("doubleDiplome")}} 
+                        {{getErrocMessage("doubleDiplome")}}
                    </mat-error>
                 </mat-form-field>
               </div>
@@ -64,13 +62,13 @@
               <mat-option *ngFor="let ue of ueList" [value]="ue.id">{{ue.designation}}</mat-option>
             </mat-select>
             <mat-error *ngIf="formationForm.invalid">
-              {{getErrocMessage("ueFormation")}} 
+              {{getErrocMessage("ueFormation")}}
          </mat-error>
           </mat-form-field>
 
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Date de début de validité de la formation</mat-label>
-            <input matInput [matDatepicker]="picker" placeholder="JJ/MM/YYYY" formControlName="dateDebut" >
+            <input matInput placeholder="JJ/MM/AAAA" formControlName="dateDebut" type="date">
             <mat-datepicker-toggle matSuffix [for]="picker">
                 <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
             </mat-datepicker-toggle>
@@ -79,19 +77,20 @@
 
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Date de fin de validité de la formation</mat-label>
-            <input matInput [matDatepicker]="picker1" placeholder="JJ/MM/YYYY" formControlName="dateFin">
+            <input matInput [matDatepicker]="picker1" placeholder="JJ/MM/YYYY" formControlName="dateFin" type="date" min="1997-01-01">
             <mat-datepicker-toggle matSuffix [for]="picker1">
                 <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
             </mat-datepicker-toggle>
             <mat-datepicker #picker1 ></mat-datepicker>
         </mat-form-field>
+
         <div class="row ">
-            <div class="col"><button mat-raised-button color="warn" type="button" (click)="fermer()" >fermer</button></div>
+            <div class="col"><button mat-raised-button color="warn" type="button" (click)="fermer()" >Annuler</button></div>
             <div class="col"></div>
             <div class="col"><button class="submitButton" mat-raised-button color="primary" type="submit" [disabled]="!formationForm.valid">Ajouter</button></div>
         </div>
-        
-       
+
+
     </form>
 
 
