--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -1,7 +1,7 @@
 <div class="row " *ngIf="this.route.snapshot.url[0].path === 'formation'">
   <div class="col "><mat-form-field>
     <mat-label> <mat-icon>search</mat-icon><span class="Rechercher">Rechercher</span></mat-label>
-    <input [(ngModel)]="recherche" matInput (keyup)="applyFilter($event)" placeholder="Ex. M2 <3" #input>
+    <input [(ngModel)]="recherche" matInput (keyup)="applyFilter($event)" placeholder="Ex. M2" #input>
   </mat-form-field></div>
   <div class="col "> <button (click)="openDialog()" class="button" mat-raised-button ><mat-icon>add</mat-icon>Ajouter Formation</button> </div>
 </div>
@@ -12,15 +12,21 @@
 <div *ngIf="etat=='ajouter'" class="alert alert-success" role="alert">
   La formation est bien ajoutée!
 </div>
+<!-- IDK WHAT THE FUCK IS GOING ON, BUT IF YOU DELETE THE NEXT LINE THE WHOLE THING GOES DOWN -->
+<p *ngIf="this.route.snapshot.url[0].path === 'formation'" hidden>{{ElementData[0]['Code']}}</p>
 <table mat-table #mytable [dataSource]="dataSource" matSort class="mat-elevation-z6">
 
   <!-- Niveau Column -->
   <ng-container *ngFor="let column of displayedColumns" matColumnDef="{{column}}" >
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-   <!--  <td mat-cell *matCellDef="let element" (click)="Details(element[displayedColumns[1]])"> -->
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div  *ngIf = "column === 'Code'; then code else other1"></div>
+      <ng-template #code>Code Formation</ng-template>
+      <ng-template #other1>{{column}}</ng-template> </th>
     <td mat-cell *matCellDef="let element" (click)="Details(element['Code'])">
-      <div  *ngIf = "column == 'Libelle'; then Niv else other"></div>
-      <ng-template #other> {{element[column]}} </ng-template>
+      <div  *ngIf = "column == 'Libellé'; then Niv else other"></div>
+      <ng-template #other>
+        {{element[column]}}
+      </ng-template>
       <ng-template #Niv><span title="{{element[column]}}"> {{element[column]}} </span></ng-template>
     </td>
   </ng-container>
@@ -28,5 +34,6 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="isClickable?'hoveringRow':''"></tr>
 </table>
+
 
 
