Add US-25 & US-55

--- a/src/app/formations-table/formations-table.component.css
+++ b/src/app/formations-table/formations-table.component.css
@@ -11,6 +11,7 @@ th, td {
   width:auto;
   text-overflow: ellipsis;
   white-space: nowrap;
+
 }
 tr.hoveringRow:hover{
   cursor: pointer;
@@ -34,12 +35,20 @@ tr.hoveringRow:hover{
 }
 
 
-button{
+.button{
   position:relative;
-    display:inline-block;
-    float:right;
+  display:inline-block;
+  float:right;
 
-    background-color: rgb(201 203 212);
-    margin-top: 1%;
+
+  background-color: rgb(201 203 212);
+  margin-top: 1%;
 
 }
+.btn-sm{
+  padding-top:12px;
+}
+
+ table{
+   margin-bottom: 25px;
+ }
