--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -1,39 +1,123 @@
-<div class="row " *ngIf="this.route.snapshot.url[0].path === 'formation'">
-  <div class="col "><mat-form-field>
-    <mat-label> <mat-icon>search</mat-icon><span class="Rechercher">Rechercher</span></mat-label>
-    <input [(ngModel)]="recherche" matInput (keyup)="applyFilter($event)" placeholder="Ex. M2" #input>
-  </mat-form-field></div>
-  <div class="col "> <button (click)="openDialog()" class="button" mat-raised-button ><mat-icon>add</mat-icon>Ajouter Formation</button> </div>
+<div *ngIf="this.route.snapshot.url[0].path === 'formation'" class="row ">
+  <div class="col ">
+    <mat-form-field>
+      <mat-label>
+        <mat-icon>search</mat-icon>
+        <span class="Rechercher">Rechercher</span></mat-label>
+      <input #input (keyup)="applyFilter($event)" [(ngModel)]="recherche" matInput placeholder="Ex. M2">
+    </mat-form-field>
+  </div>
+  <div class="col ">
+    <button (click)="openDialog()" class="button" mat-raised-button>
+      <mat-icon>add</mat-icon>
+      Ajouter Formation
+    </button>
+  </div>
 </div>
 
 <div *ngIf="etat=='existe'" class="alert alert-danger" role="alert">
-  Cette formation existe déja!!
+  Cette formation existe déjà !
 </div>
 <div *ngIf="etat=='ajouter'" class="alert alert-success" role="alert">
-  La formation est bien ajoutée!
+  La formation a bien été ajoutée !
+</div>
+<div *ngIf="etat=='supprimer'" class="alert alert-success" role="alert">
+  La formation a bien été supprimée !
+</div>
+<div *ngIf="etat=='nosupprimer'" class="alert alert-danger" role="alert">
+  Erreur lors de la suppression de la formation !
+</div>
+<div *ngIf="etat=='modifier'" class="alert alert-success" role="alert">
+  L'UE a bien été modifiée !
+</div>
+<div *ngIf="etat=='Nomodif'" class="alert alert-danger" role="alert">
+  Erreur lors de la modification de l'UE !
 </div>
 <!-- IDK WHAT THE FUCK IS GOING ON, BUT IF YOU DELETE THE NEXT LINE THE WHOLE THING GOES DOWN -->
 <p *ngIf="this.route.snapshot.url[0].path === 'formation'" hidden>{{ElementData[0]['Code']}}</p>
-<table mat-table #mytable [dataSource]="dataSource" matSort class="mat-elevation-z6">
+<table #mytable [dataSource]="dataSource" class="mat-elevation-z6" mat-table matSort>
 
-  <!-- Niveau Column -->
-  <ng-container *ngFor="let column of displayedColumns" matColumnDef="{{column}}" >
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      <div  *ngIf = "column === 'Code'; then code else other1"></div>
-      <ng-template #code>Code Formation</ng-template>
-      <ng-template #other1>{{column}}</ng-template> </th>
-    <td mat-cell *matCellDef="let element" (click)="Details(element['Code'])">
-      <div  *ngIf = "column == 'Libellé'; then Niv else other"></div>
+  <!--  -->
+  <ng-container *ngFor="let column of displayedColumns" matColumnDef="{{column}}">
+    <div *ngIf="column==='Détails'; then detail else other2"></div>
+    <ng-template #detail>
+      <th *matHeaderCellDef class="details-button" mat-header-cell>
+        <!--{{column}}-->
+      </th>
+    </ng-template>
+    <ng-template #other2>
+      <div *ngIf="column==='DétailsUE';then detailsUe else other2"></div>
+      <ng-template #detailsUe>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
+
+        </th>
+      </ng-template>
+      <ng-template #other2>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
+          {{column}}
+        </th>
+      </ng-template>
+
+    </ng-template>
+    <td *matCellDef="let element" mat-cell>
+      <div *ngIf="column == 'Libellé'; then Niv else other"></div>
       <ng-template #other>
-        {{element[column]}}
+        <div *ngIf="column=='Détails'; then detailsSupprimer else other1"></div>
+        <ng-template #detailsSupprimer>
+          <!-- <button class="btn btn-light" (click)="Details(element['Code'])">Détails</button>-->
+
+          <div class="btn-group mb-2 btn-sm">
+            <button (click)="Details(element['Code'])" class="btn btn-outline-secondary " type="button">
+              <svg class="bi bi-eye" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"></path>
+                <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"></path>
+              </svg>
+              <span class="visually-hidden">  Détails</span>
+            </button>
+            <button (click)="supprimerDialog(element['Code'])" class="btn btn-outline-danger" type="button">
+              <svg class="bi bi-trash" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
+                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
+                      fill-rule="evenodd"></path>
+              </svg>
+              <span class="visually-hidden">  Supprimer</span>
+            </button>
+
+          </div>
+
+
+        </ng-template>
+        <ng-template #other1>
+          <div *ngIf="column=='DétailsUE'; then modif else other2"></div>
+          <ng-template #modif>
+            <!-- <button class="btn btn-light" (click)="Details(element['Code'])">Détails</button>-->
+
+            <div class="btn-group mb-2 btn-sm">
+              <button  (click)="openDialogModif(element['Nom'])" class="btn btn-outline-secondary " type="button">
+                <svg class="bi bi-eye" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                </svg>
+                <span class="visually-hidden">  Modifier</span>
+              </button>
+            </div>
+
+
+          </ng-template>
+          <ng-template #other2>{{element[column]}}</ng-template>
+        </ng-template>
       </ng-template>
       <ng-template #Niv><span title="{{element[column]}}"> {{element[column]}} </span></ng-template>
     </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="isClickable?'hoveringRow':''"></tr>
-</table>
 
+  <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+  <tr *matRowDef="let row; columns: displayedColumns;" [ngClass]="isClickable?'hoveringRow':''" mat-row></tr>
+</table>
 
 
