Add US-25 & US-55 manque plus que le service suppression

--- a/src/app/formations-table/formations-table.component.html
+++ b/src/app/formations-table/formations-table.component.html
@@ -118,7 +118,7 @@
             <!-- <button class="btn btn-light" (click)="Details(element['Code'])">Détails</button>-->
 
             <div class="btn-group mb-2 btn-sm">
-              <button (click)="openDialogModif(element['Nom'])" class="btn btn-outline-secondary " type="button">
+              <button (click)="openDialogModif(element['Code UE'])" class="btn btn-outline-secondary " type="button">
                 <svg class="bi bi-eye" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
