--- a/src/app/formation-details/formation-details.component.html
+++ b/src/app/formation-details/formation-details.component.html
@@ -1,4 +1,3 @@
-
 <mat-card>
 
     <div class="fixed row">
@@ -9,7 +8,7 @@
 
     <br />
     <mat-card-title>
-      <span class="titleItems">Diplome : </span>
+      <span class="titleItems">Diplôme : </span>
       <span  *ngIf="data.diplome=='L'" style="font-family: sans-serif;font-size: 16px;">Licence</span>
       <span  *ngIf="data.diplome=='M'" style="font-family: sans-serif;font-size: 16px;">Master</span>
       <span  *ngIf="data.diplome=='D'" style="font-family: sans-serif;font-size: 16px;">Doctorat</span>
@@ -28,13 +27,13 @@
     </mat-card-title>
     <br>
     <mat-card-title>
-      <span class="titleItems">Double Diplome : </span>
+      <span class="titleItems">Double Diplôme : </span>
       <span *ngIf="data.double_diplome=='n' || data.double_diplome=='N' " style="font-family: sans-serif;font-size: 16px;">Non</span>
       <span *ngIf="data.double_diplome=='O' || data.double_diplome=='o'" style="font-family: sans-serif;font-size: 16px;">Oui</span>
     </mat-card-title>
     <br>
     <mat-card-title>
-      <span class="titleItems">Debut Habilitation : </span>
+      <span class="titleItems">Début Habilitation : </span>
       <div *ngIf="data.debut_habilitation === null; then no else exist"></div>
       <ng-template #exist> <span style="font-family: sans-serif;font-size: 16px;">{{data.debut_habilitation | date: 'dd/MM/yyyy'}}</span> </ng-template>
       <ng-template #no><span style="font-family: sans-serif;font-size: 16px;">Date non renseigné</span></ng-template>
@@ -47,6 +46,8 @@
       <ng-template #no1><span style="font-family: sans-serif;font-size: 16px;">Date non renseigné</span></ng-template>
     </mat-card-title>
   <br><br>
+  <span class="titleItems">Unités Enseignement : </span>
+  <br/>
   <app-formations-table [isClickable]="false"></app-formations-table>
 
 </mat-card>
