--- a/src/app/formation-details/formation-details.component.scss
+++ b/src/app/formation-details/formation-details.component.scss
@@ -7,7 +7,7 @@
   font-family: sans-serif;
   font-size: 23px;
   font-weight: bold;
-  color: darkolivegreen;
+  color: black;
   width: 30%;
   float: left;
 
